--- a/waku.css
+++ b/waku.css
@@ -1,1 +1,35 @@
-div
+.header-logo{
+  width: 100%;
+  height: 50px;
+  background-color: red;
+}
+.header-visual{
+  width: 100%;
+  height: 500px;
+  background-color: orange;
+}
+
+.main{
+  width: 960px;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  background-color: pink;
+
+}
+.main1{
+  width:230px;
+  height: 1400px;
+background-color: rgb(183, 194, 122);
+}
+.main2{
+  width: 500px;
+height: 1400px;
+background-color: green;
+
+}
+.main3{
+  width: 230px;
+  height: 1400px;
+  background-color: rgb(183, 194, 122);
+}
